# cmake_demo

01_getting_start/: CMakeLists.txt  main.c
02_more_files/: CMakeLists.txt
03_library/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.cpp
04_install_script/: CMakeLists.txt  hello.c
05_cross_os/: CMakeLists.txt  linux.c  win.c
06_cpack/: CMakeLists.txt  main.c
